syntax = "proto3";
package order;

option go_package = "github.com/blackhorseya/godine/entity/domain/order/model";

// Address is a value object that represents the address of a user.
message Address {
  // Street is the street address of the user.
  // @gotags: bson:"street"
  string street = 1;

  // City is the city where the user is located.
  // @gotags: bson:"city"
  string city = 2;

  // State is the state where the user is located.
  // @gotags: bson:"state"
  string state = 3;

  // ZipCode is the postal code of the user's location.
  // @gotags: bson:"zip_code"
  string zip_code = 4;
}

// OrderEvent is an event that represents an order.
message OrderEvent {
  // Name is the name of the order.
  // @gotags: bson:"name"
  string name = 1;

  // Handler is the handler of the order.
  // @gotags: bson:"handler_id"
  string handler_id = 2;
}
